--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
                type="email"
                required="required">
 
-        <input type="submit"
-               
-               >
+        <input type="submit">
     </form>
 
 </body>
