Added InvalidMsgArea and custom error messages for area
Checks if input is a number and then if it is, checks if it is in the allowed range

--- a/index.html
+++ b/index.html
@@ -25,12 +25,9 @@
         <input type="number"
                id="2"
                name="area"
-               min="7"
-               max="99"
                placeholder="Required"
-               oninvalid="InvalidArea(area);"
-               oninput="InvalidArea(area);"
-               required="required">
+               oninvalid="InvalidMsgArea(this);"
+               onblur="InvalidMsgArea(this);">
 
 
         <label for="email">Email:</label>
