Fixed area error message function

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <input type="number"
                id="2"
                name="area"
+               min="7"
+               max="99"
                placeholder="Required"
                oninvalid="InvalidMsgArea(this);"
                onblur="InvalidMsgArea(this);">
