Regex prompts for .com if only gmail is detected

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <input id="email"
                oninvalid="InvalidMsgEmail(this);"
-               oninput="InvalidMsgEmail(this);"
+               onblur="InvalidMsgEmail(this);"
                name="email"
                type="email"
                required="required">
